fix: cropped hero image

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -17,7 +17,7 @@
 
     @include ab.media-up("lg") {
       &::after {
-        left: 20%;
+        left: 5%;
       }
     }
 
